# small_order_system

./: .env.example  README.md  alembic.ini  docker-compose.test.yml  main.py  middlewares.py  pyproject.toml  requirements.txt
broker/: consumer.py  publisher.py
dbhistory/: env.py
dbhistory/versions/: 19303a8fa0ca_create_tables_add_relations.py  b8d50487b0c0_inital.py
urls/: users.py
